kore/test/resources/test-bool-4.kore.golden
Error in module 'BOOL' -> alias 'falseBool' declaration (./test/resources//test-bool-4.kore 4:11) -> \dv (./test/resources//test-bool-4.kore 4:61) -> Verifying builtin sort 'BOOL.Bool' -> While parsing domain value: <string literal>:1:1:
  |
1 | untrue
  | ^^^^^
unexpected "untru"
expecting "false" or "true"
